--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,8 @@
 <div class="row profile-heading pt-4 mb-5">
-  <div class="col-12 d-flex justify-content-center">
+  <div class="col-12 d-flex justify-content-center mb-4">
     <h1 class="display-4">Welcome to Dempa's Blogs!</h1>
   </div>
+
   <div class="col-12 d-flex justify-content-start">
     <h3 class="align-self-center mb-0">Blogs 26</h3>
   </div>
@@ -15,61 +16,28 @@
     </div>
   </div>
 </div>
-{{!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 g-4">
-    {{#if reviews}}
-    {{#each reviews}}
-    <div class="col">
-        <div class="card h-100 border-2 my-2">
-            <div class="movie-list">
-                <a href="/review/view?r={{_id}}">
-                    <img src="https://image.tmdb.org/t/p/original/{{movie.image}}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">{{movie.title}}</h5>
-                        <p class="card-text">{{{coverDesc}}}</p>
-                    </div>
-                </a>
-            </div>
-            <div class="card-footer mt-auto d-flex justify-content-end">
-                {{{deleteBtn user._id ../userId _id}}}
-                {{{editBtn user._id ../userId _id}}}
-                <small class="text-muted my-auto"> - {{user.local.userName}}</small>
-            </div>
-        </div>
-    </div>
-    {{/each}}
-    {{else}}
-    <p>No reviews</p>
-    {{/if}}
-</div> --}}
+
 
 <div class="row">
-  <div class="col-10 mx-auto my-3">
-    <div class="list-group">
-      {{! <a
-        type="button"
-        class="list-group-item list-group-item-action"
-        data-bs-toggle="modal"
-        data-bs-target="#movieModal"
-      >
-        <div class="d-flex w-100 justify-content-between">
-          <h5 class="mb-1">movie b</h5>
-          <small class="text-muted">3 days ago</small>
-        </div>
-        <p class="mb-1">Some placeholder content in a paragraph.</p>
-        <small class="text-muted">And some muted small print.</small>
-      </a> }}
+  <div class="col-md-10 col-12 mx-auto my-1 mb-5">
+    <div class="col-12">
+      <h1 style="color: #fafafa;">Posts</h2>
+    </div>
 
+    <div class="list-group">
       {{#if reviews}}
         {{#each reviews}}
           <a
             type="button"
-            class="list-group-item list-group-item-action"
+            class="list-group-item list-group-item-action border-2 profile-list"
             data-bs-toggle="modal"
             data-bs-target="#review_id_{{_id}}"
           >
             <div class="d-flex w-100 justify-content-between">
-              <h5>{{movie.title}}</h5>
-              <small class="text-muted">{{createdAt}}</small>
+              <div class="col-8">
+                <h5>{{movie.title}}</h5>
+              </div>
+              <small class="text-muted">{{formatDate createdAt}}</small>
             </div>
             <p class="mb-1 short-desc">{{coverDesc}}</p>
           </a>
@@ -79,7 +47,7 @@
               <div class="modal-content">
                 <div class="modal-body">                        
                     <div class="col">
-                        <div class="card h-100 border-0">
+                        <div class="card h-100 border-2" style="border-color:#101820">
                             <div class="movie-list">
                                 <a href="/review/view?r={{_id}}">
                                     <img src="https://image.tmdb.org/t/p/original/{{movie.image}}" class="card-img-top" alt="...">
@@ -93,6 +61,7 @@
                     </div>
                 </div>
                 <div class="modal-footer bg-dark">
+                  <button class="btn btn-secondary me-auto" data-bs-dismiss="modal" >Close</button>
                   {{{deleteBtn user._id ../userId _id}}}
                   {{{editBtn user._id ../userId _id}}}
                   <a
