--- a/views/layouts/review.hbs
+++ b/views/layouts/review.hbs
@@ -1,80 +1,85 @@
+<!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    {{! FA Icons }}
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-    />
+  {{! FA Icons }}
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" />
 
-    {{! Font }}
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
+  {{! Font }}
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
 
-    {{! Main css }}
-    <link rel="stylesheet" href="/css/style.css" />
+  {{! Main css }}
+  <link rel="stylesheet" href="/css/style.css" />
 
-    <title>Post Review</title>
-  </head>
+  <title>Post Review</title>
+</head>
 
-  <body>
-    <div class="container-fluid h-100">
-      <div class="row align-items-center justify-content-center h-100">
-        <div class="col-md-10 col-lg-5 mb-5">
-          {{! <div class="card text-center mb-5"> }}
-          {{{body}}}
-          {{! </div> }}
-        </div>
+<body>
+  <div class="container-fluid h-100">
+    <div class="row align-items-center justify-content-center h-100">
+      <div class="col-md-10 col-lg-5 mb-5">
+        {{{body}}}
       </div>
     </div>
+  </div>
 
-    {{! Bootstrap Plugins }}
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.min.js"
-      integrity="sha512-mp3VeMpuFKbgxm/XMUU4QQUcJX4AZfV5esgX72JQr7H7zWusV6lLP1S78wZnX2z9dwvywil1VHkHZAqfGOW7Nw=="
-      crossorigin="anonymous"
-    ></script>
+  {{! Bootstrap Plugins }}
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.min.js"
+    integrity="sha512-mp3VeMpuFKbgxm/XMUU4QQUcJX4AZfV5esgX72JQr7H7zWusV6lLP1S78wZnX2z9dwvywil1VHkHZAqfGOW7Nw=="
+    crossorigin="anonymous"></script>
 
-    {{! Tinymce }}
-    <script
-      src="https://cdn.tiny.cloud/1/3sr9jv5ywpqkd6xjq0xdky95r9iah8q9uqa5udmkbamkb7ms/tinymce/5/tinymce.min.js"
-      referrerpolicy="origin"
-    ></script>
+  {{! Tinymce }}
+  <script src="https://cdn.tiny.cloud/1/3sr9jv5ywpqkd6xjq0xdky95r9iah8q9uqa5udmkbamkb7ms/tinymce/5/tinymce.min.js"
+    referrerpolicy="origin"></script>
 
-    <script>
-      tinymce.init({ selector: '#body', plugins: 'lists autolink link autoresize
-      emoticons image imagetools nonbreaking fullscreen', menubar: 'format',
-      toolbar: 'fontselect fontsizeselect | bold italic underline | formatselect
-      | numlist bullist | blocks link image emoticons fullscreen ', themes:
-      'inlite', default_link_target: '_blank', min_height: 700, width: 1000,
-      object_resizing: true, nonbreaking_force_tab: true,
-      init_instance_callback: editor => { tinymce.activeEditor.setContent(`{{{content}}}`)
-      editor.on('Change', e => { var str = tinymce.get('body').getContent({
-      format: 'text' }).replace(/\\r?\n|\r/g, " "); if (str.length > 350) { str
-      = str.substr(0, str.lastIndexOf(' ', 300)) + "..."; }
-      document.getElementById('coverDesc').value = str; editor.save() }) }, });
+  <script>
+    tinymce.init({
+      selector: '#body',
+      plugins: 'lists autolink link autoresize emoticons image imagetools nonbreaking fullscreen',
+      menubar: 'format',
+      toolbar: 'fontselect fontsizeselect | bold italic underline | formatselect | numlist bullist | blocks link image emoticons fullscreen ',
+      default_link_target: '_blank',
+      min_height: 700,
+      width: 1000,
+      object_resizing: true,
+      nonbreaking_force_tab: true,
+      skin: 'oxide-dark',
+      content_css: 'dark',
+      content_style: 'body {color: #fafafa;}',
+      mobile: {
+        menubar: true,
+        theme: 'mobile',
+      },
+      init_instance_callback: editor => {
+        tinymce.activeEditor.setContent(`{{{content}}}`)
+        editor.on('Change', e => {
+          var str = tinymce.get('body').getContent({
+            format: 'text'
+          }).replace(/\r?\n|\r/g, " ");
+          if (str.length > 350) {
+            str = str.substr(0, str.lastIndexOf(' ', 300)) + "...";
+          }
+          document.getElementById('coverDesc').value = str;
+          editor.save();
+        })
+      },
+    });
 
-    </script>
+  </script>
 
-  </body>
+</body>
 
 </html>
