--- a/views/post_review.hbs
+++ b/views/post_review.hbs
@@ -1,19 +1,20 @@
-<div class="row d-flex justify-content-center mb-3">
-    <h1>Write your movie blog!</h1>
-</div>
-<div class="row mt-2">
-    <form action="/review/post?id={{movieId}}" method="POST" class="col s12">
-
-        <div class="col d-flex justify-content-center">
-            <input type="hidden" id="coverDesc" name="coverDesc">
-            <div class="input-field">
-                <textarea name="body" id="body" required></textarea>
+<div class="row">
+    <div class="col-12 d-flex justify-content-center mb-4">
+        <h1 style="color: #fafafa;">Write your movie blog!</h1>
+    </div>
+    <div class="col-12 d-flex justify-content-center mt-3">
+        <form action="/review/post?id={{movieId}}" method="POST" class="col s12">
+            <div class="col d-flex justify-content-center">
+                <input type="hidden" id="coverDesc" name="coverDesc">
+                <div class="input-field">
+                    <textarea name="body" id="body" required></textarea>
+                </div>
             </div>
-        </div>
 
-        <div class="col d-flex justify-content-center mt-3">
-            <a href="/home" class="btn btn-outline-dark mx-1">Cancel</a>
-            <input type="submit" value="Post" class="btn btn-outline-dark mx-1">
-        </div>
-    </form>
+            <div class="col d-flex justify-content-center mt-3">
+                <a href="/home" class="btn btn-outline-warning mx-1">Cancel</a>
+                <input type="submit" value="Post" class="btn btn-outline-warning mx-1">
+            </div>
+        </form>
+    </div>
 </div>
