--- a/views/view_review.hbs
+++ b/views/view_review.hbs
@@ -1,8 +1,8 @@
 <div class="row align-items-center justify-content-center h-100 mt-5">
     <div class="col-md-10 col-lg-8 mb-5">
         <h3 class="card-title">{{data.user.local.userName}}, * * * *</h3>
-        <div class="card mb-2">
-            <div class="card-body">
+        <div class="card mb-2" style="background-color: #2F3742">
+            <div class="card-body" style="color: #fafafa;">
                 {{{data.body}}}
             </div>
         </div>
