--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,20 +13,12 @@
                 </a>
             </div>
             <div class="card-footer mt-auto d-flex justify-content-end">
-                {{!-- <a href="#" class="btn btn-outline-danger shadow-none btn-sm mr-2 d-flex justify-content-center" role="button" data-toggle="button"
-                    style="font-size: medium; border:none">
-                </a> --}}
-                {{!-- <button type="button" class="btn btn-outline-danger shadow-none btn-sm mr-2 d-flex justify-content-center" style="font-size: medium; border:none" data-bs-toggle="button" >
-                    <i class="far fa-heart fa-lg align-self-center"></i>
-                </button>
-                <a href="#" class="btn btn-outline-success btn-sm mr-auto" style="font-size:medium; border:none">Read
-                    more
-                </a> --}}
                 {{{editBtn user._id ../userId _id}}}
                 {{{deleteBtn user._id ../userId _id}}}
-                <small class="text-muted my-auto"> - <a href="/user?u={{user._id}}" class="username-link" >
-                {{user.local.userName}}
-                </a></small>
+                <small class="text-muted my-auto"> -
+                    <a href="/user?u={{user._id}}" class="username-link">
+                        {{user.local.userName}}
+                    </a></small>
             </div>
         </div>
     </div>
