--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -13,8 +13,13 @@
     <form action="/user/follow?id={{userProfile._id}}" method="POST" class="col-12 d-flex justify-content-end">
       <input type="hidden" name="_method" value="PUT">
       <button type="submit" class="btn btn-outline-info my-1">
+        {{#if isFollowing}}
+        Unfollow
+        <i class="fas fa-minus"></i>
+        {{else}}
         Follow
         <i class="fas fa-plus"></i>
+        {{/if}}
       </button>
     </form>
   </div>
