--- a/views/favorites.hbs
+++ b/views/favorites.hbs
@@ -30,6 +30,10 @@
     </div>
     {{/each}}
     {{else}}
-    <p>No reviews</p>
+    <div class="col-12 d-flex mx-auto profile-heading justify-content-center mt-5">
+        <h3 class="text-muted">No blogs posted
+            <i class="far fa-frown-open"></i>
+        </h3>
+    </div>
     {{/if}}
 </div>
