--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -74,7 +74,11 @@
       </div>
       {{/each}}
       {{else}}
-      No Blogs
+      <div class="col-12 d-flex mx-auto profile-heading justify-content-center mt-5">
+        <h3 class="text-muted">No blogs
+          <i class="far fa-frown-open"></i>
+        </h3>
+      </div>
       {{/if}}
     </div>
   </div>
