--- a/views/partials/_navbar.hbs
+++ b/views/partials/_navbar.hbs
@@ -8,13 +8,13 @@
   <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-5 me-auto mb-2 mb-lg-0">
       <li class="nav-item mx-lg-4">
-        <a class="nav-link nav-link-ltr" aria-current="page" href="/home">Home</a>
+        <a class="nav-link nav-link-ltr {{#if isHome}} current-ltr {{/if}}" href="/home">Home</a>
       </li>
       <li class="nav-item mx-lg-4">
-        <a class="nav-link nav-link-ltr" href="/favorites">Favorites</a>
+        <a class="nav-link nav-link-ltr {{#if isFavorites}} current-ltr {{/if}}" href="/favorites">Favorites</a>
       </li>
       <li class="nav-item mx-lg-4">
-        <a class="nav-link nav-link-ltr" href="/user?u={{userId}}">Profile</a>
+        <a class="nav-link nav-link-ltr {{#if isProfile}} current-ltr {{/if}}" href="/user?u={{userId}}">Profile</a>
       </li>
     </ul>
     <a href="/auth/logout" class="btn btn-outline-warning mx-lg-4" role="button">Logout</a>
