--- a/views/edit_review.hbs
+++ b/views/edit_review.hbs
@@ -1,4 +1,4 @@
-<div class="row d-flex justify-content-center mb-3">
+<div class="row d-flex mx-auto profile-heading justify-content-center mb-2">
     <h1>Edit your movie blog</h1>
 </div>
 <div class="row mt-2">
@@ -11,9 +11,9 @@
             </div>
         </div>
 
-        <div class="col d-flex justify-content-center mt-3">
-            <a href="/home" class="btn btn-outline-dark mx-1">Cancel</a>
-            <input type="submit" value="Save" class="btn btn-outline-dark mx-1">
+        <div class="col d-flex justify-content-center my-4">
+            <a href="/home" class="btn btn-outline-warning mx-1">Cancel</a>
+            <input type="submit" value="Save" class="btn btn-outline-warning mx-1">
         </div>
     </form>
 </div>
