--- a/views/post_review.hbs
+++ b/views/post_review.hbs
@@ -1,16 +1,20 @@
 <div class="row">
-    <div class="col-12 d-flex justify-content-center mb-4">
+    <div class="col-12 d-flex justify-content-center mb-1">
         <h1 style="color: #fafafa;">Write your movie blog!</h1>
     </div>
     <div class="col-12 d-flex justify-content-center mt-3">
         <form action="/review/post?id={{movieId}}" method="POST" class="col s12">
-            <div class="col d-flex justify-content-center">
+            <div class="col d-flex flex-column justify-content-center">
                 <input type="hidden" id="coverDesc" name="coverDesc">
+                <div class="col-12 d-flex profile-heading">
+                    <h3 class="text-muted">Title:</h3>
+                </div>
+                <input type="title" class="mb-5" placeholder="Title..." id="title" name="title"
+                    style="background-color: #2F3742; color: #fafafa; border: none;" required>
                 <div class="input-field">
                     <textarea name="body" id="body" required></textarea>
                 </div>
             </div>
-
             <div class="col d-flex justify-content-center mt-3">
                 <a href="/home" class="btn btn-outline-warning mx-1">Cancel</a>
                 <input type="submit" value="Post" class="btn btn-outline-warning mx-1">
