Adding comment feature

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -166,3 +166,11 @@ body {
 .tinymce-body {
   background-color: #030200;
 }
+
+.comment {
+  background-color: #101820;
+  color: #fafafa;
+  border: none;
+  border-bottom: 2px solid orange;
+  resize: none;
+}
