--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -21,8 +21,7 @@
     <title>Blog-Review</title>
 </head>
 
-<body>
-
+<body class="pg1">
     {{> _navbar}}
     {{> _add_btn}}
     <div class="container-fluid">
