Added commenting on blogs

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -21,7 +21,7 @@
     <title>Blog-Review</title>
 </head>
 
-<body class="pg1">
+<body>
     {{> _navbar}}
     {{> _add_btn}}
     <div class="container-fluid">
