--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  padding-top: 6vh;
+  padding-top: 3rem;
   background-color: $primary;
 }
 
@@ -173,4 +173,9 @@ body {
   border: none;
   border-bottom: 2px solid orange;
   resize: none;
+}
+
+textarea:focus {
+  outline: none;
+  border-bottom: 2px solid #fafafa;
 }
