Added google auth usernames

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -24,7 +24,12 @@ html {
   height: 100%;
   height: 100vh;
 }
-
+.loginPage {
+  background-image: url("../images/login_bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 body {
   padding-top: 3rem;
   background-color: $primary;
