--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -21,12 +21,12 @@
     <title>Blog-Review Login</title>
 </head>
 
-<body>
+<body class="loginPage">
     <div class="container-fluid h-100">
         <div class="row align-items-center justify-content-center h-100">
             <div class="col-md-10 col-lg-5 mb-5">
                 {{> _alert}}
-                <div class="card text-center mb-5">
+                <div class="card border-0 text-center mb-5">
                     {{{body}}}
                 </div>
             </div>
