--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,6 +1,7 @@
 <div class="row profile-heading pt-4 mb-5">
   <div class="col-12 d-flex justify-content-center mb-4">
-    <h1 class="display-4">Welcome to {{userProfile.local.userName}}'s Blogs!</h1>
+    <h1 class="display-4">Welcome to {{userNamePick userProfile.local.userName userProfile.google.userName}}'s Blogs!
+    </h1>
   </div>
 
   <div class="col-12 d-flex justify-content-start">
