--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-<div class="card-header">
+<div class="card-header border-0">
     <ul class="nav nav-pills card-header-pills nav-fill" id="pills-tab" role="tablist">
         <li class="nav-item d-grid" role="presentation">
             <button class="btn active btn-outline-dark shadow-none" id="login-pill" data-bs-toggle="pill"
