--- a/views/login.hbs
+++ b/views/login.hbs
@@ -72,6 +72,13 @@
                     </div>
                 </div>
             </form>
+
+            <hr class="mt-4" />
+
+            <a href="/auth/google" class="btn btn-outline-danger btn-lg" role="button">
+                <i class="fab fa-google fa-lg"></i>
+                <i class="fas fa-plus fa-lg"></i>
+            </a>
         </div>
     </div>
 </div>
