--- a/views/partials/_add_btn.hbs
+++ b/views/partials/_add_btn.hbs
@@ -17,7 +17,7 @@
       <div class="modal-body">
         <form action="/movie" method="POST" class="d-flex mx-lg-5 mb-lg-0 mb-2">
           <input class="form-control search-input mr-2" type="search" placeholder="Review Movie" name="search"
-            aria-label="Search" />
+            autocomplete="off" />
           <button class="btn search" id="searchButton" type="submit">
             <i class="fas fa-search"></i>
           </button>
