--- a/views/favorites.hbs
+++ b/views/favorites.hbs
@@ -11,7 +11,8 @@
         <div class="card my-3 h-100 border-2">
             <div class="movie-list">
                 <a href="/review/view?r={{_id}}">
-                    <img src="https://image.tmdb.org/t/p/original/{{movie.image}}" class="card-img-top" alt="...">
+                    <img src="https://image.tmdb.org/t/p/original/{{movie.image}}"
+                        onerror="this.onerror=null;this.src='../images/default.jpg';" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{movie.title}}</h5>
                         <p class="card-text">{{{coverDesc}}}</p>
