--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,11 +1,12 @@
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 g-4">
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 g-4 mb-5">
     {{#if reviews}}
     {{#each reviews}}
     <div class="col">
         <div class="card my-3 h-100 border-2">
             <div class="movie-list">
                 <a href="/review/view?r={{_id}}">
-                    <img src="https://image.tmdb.org/t/p/original/{{movie.image}}" class="card-img-top" alt="...">
+                    <img src="https://image.tmdb.org/t/p/original/{{movie.image}}"
+                        onerror="this.onerror=null;this.src='../images/default.jpg';" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{movie.title}}</h5>
                         <p class="card-text">{{{coverDesc}}}</p>
