--- a/views/post_review.hbs
+++ b/views/post_review.hbs
@@ -9,7 +9,7 @@
                 <div class="col-12 d-flex profile-heading">
                     <h3 class="text-muted">Title:</h3>
                 </div>
-                <input type="title" class="mb-5" placeholder="Title..." id="title" name="title"
+                <input type="title" class="mb-5" placeholder="Title..." id="title" name="title" autocomplete="off"
                     style="background-color: #2F3742; color: #fafafa; border: none;" required>
                 <div class="input-field">
                     <textarea name="body" id="body" required></textarea>
