--- a/views/view_review.hbs
+++ b/views/view_review.hbs
@@ -43,6 +43,9 @@
                     user.google.userName}}</a>
             </h3>
             <small class="text-muted ms-2 align-self-end mb-2">{{formatDate postedAt}}</small>
+            <div class="mt-1 me-4 ms-auto">
+                {{{deleteComment user._id ../userId ../data._id _id}}}
+            </div>
         </div>
         <div class="col ms-4 mt-2 me-5" style="color: #fafafa;">
             <p>{{comment}}</p>
