--- a/views/layouts/review.hbs
+++ b/views/layouts/review.hbs
@@ -42,9 +42,10 @@
     crossorigin="anonymous"></script>
 
   {{! Tinymce }}
-  <script src="https://cdn.tiny.cloud/1/3sr9jv5ywpqkd6xjq0xdky95r9iah8q9uqa5udmkbamkb7ms/tinymce/5/tinymce.min.js"
-    referrerpolicy="origin"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/7.2.1/tinymce.min.js"
+    integrity="sha512-zmlLhIesl+uwwzjoUz/izUsSjAMVb/7fH2ffCbJvYLepAvdvAq1T6ev9edZR8jwRKfM0OTaUyFVO1D7wAwXCEw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  
   <script>
     tinymce.init({
       selector: '#body',
